WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
235086
WebPageProxy destruction should not launch a network process
https://bugs.webkit.org/show_bug.cgi?id=235086
Summary
WebPageProxy destruction should not launch a network process
Geoffrey Garen
Reported
2022-01-11 15:18:42 PST
WebPageProxy destruction should not launch a network process
Attachments
Patch
(1.59 KB, patch)
2022-01-11 15:23 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.46 KB, patch)
2022-01-11 16:31 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Patch
(3.76 KB, patch)
2022-01-11 16:53 PST
,
Geoffrey Garen
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Geoffrey Garen
Comment 1
2022-01-11 15:23:25 PST
Created
attachment 448883
[details]
Patch
Alex Christensen
Comment 2
2022-01-11 16:05:54 PST
Comment on
attachment 448883
[details]
Patch This is not a bad idea. It can be tested by extending the NetworkProcess.LaunchOnlyWhenNecessary API test.
Geoffrey Garen
Comment 3
2022-01-11 16:31:45 PST
Created
attachment 448890
[details]
Patch
Alex Christensen
Comment 4
2022-01-11 16:32:52 PST
Comment on
attachment 448890
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=448890&action=review
> Tools/TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm:95 > + webView = nullptr;
Does this destroy the WebPageProxy? I would expect an @autoreleasepool somewhere to prevent any autoreleased objects from keeping it alive.
Geoffrey Garen
Comment 5
2022-01-11 16:53:12 PST
Created
attachment 448892
[details]
Patch
EWS
Comment 6
2022-01-11 20:02:40 PST
Committed
r287907
(
245940@main
): <
https://commits.webkit.org/245940@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 448892
[details]
.
Radar WebKit Bug Importer
Comment 7
2022-01-11 20:03:16 PST
<
rdar://problem/87433821
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug