WebPageProxy destruction should not launch a network process https://bugs.webkit.org/show_bug.cgi?id=235086

Reviewed by Alex Christensen.

Source/WebKit:

Inspired by a backtrace in rdar://86706412.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::~WebPageProxy): No need to message the network
process requesting our removal if it doesn't exist.

Tools:

* TestWebKitAPI/Tests/WebKitCocoa/NetworkProcess.mm:
(TEST): Include WebView destruction in the test. Also do a little
run loop spinning, to give the test a better chance of failing when
async behavior does launch the Network process.



Canonical link: https://commits.webkit.org/245940@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287907 268f45cc-cd09-0410-ab3c-d52691b4dbfc